@@ -4,14 +4,15 @@
 // See file LICENSE for details and terms of copying.
 
 #include <stdlib.h>
-#include <stdio.h> // sprintf
-#import <string.h>
+#include <stdio.h> // sprintf, sscanf
 
 #import <objc/objc.h>
 #import <objc/objc-api.h>
 #import <objectbase/VarProbe.h>
 #import <defobj.h> // Warning
 #import "local.h"
+
+#include <misc.h> // strdup, strcmp
 
 @implementation VarProbe
 
