@@ -1,3 +1,7 @@
+1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* ProbeMap.m, VarProbe.m: Include misc.h instead of string.h.
+
 1998-07-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* objectbase.h (Probe): Add argument to setProbeClass.
